--- a/Master/package.json
+++ b/Master/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "master",
+  "name": "developer",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "electron": "^6.0.12",
+    "electron-html-to": "^2.6.0",
+    "inquirer": "^7.1.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
